# TerminalColors

./: README.md  meson.build
po/: POTFILES  com.github.lafydev.terminalcolors.pot  de.po  es.po  fr.po
src/: Plug.vala  Plug.vala~
